<resources>
    <string name="app_name">每日通告</string>
    <string name="skip">跳过</string>
    <string name="str_home">首页</string>
    <string name="str_discovery">发现</string>
    <string name="str_msg">消息</string>
    <string name="str_mine">我的</string>
    <string name="str_no_data">暂无数据</string>
    <string name="str_no_dynamic">暂时没人发布动态，赶快抢占头条 ~ </string>
    <string name="str_no_notice">还没有通告需求哦，持续关注吧 ~ </string>
    <string name="str_no_reds">没有红人入驻哦，赶快设置个人封面抢占 ~ </string>
    <string name="str_title_discovery">发现</string>
    <string name="str_login_tip">你好，\n欢迎来到每日通告</string>
    <string name="str_phone_num">请输入手机号</string>
    <string name="str_auth_code">请输入验证码</string>
    <string name="str_pwd">请输入密码</string>
    <string name="str_forget_pwd">忘记密码</string>
    <string name="str_login_little_tip">小提示:</string>
    <string name="str_start_login_tip">首次登录输入完用户名及您喜欢的密码即可哦</string>
    <string name="str_login">登录</string>
    <string name="str_login_agreement_tip">点击登录表示已阅读并同意用户使用协议</string>
    <string name="str_agreement_title">用户使用协议</string>
    <string name="str_user_agreement">"                                     每日通告注册条款\n一、注册提示\n1.0  首先，我们不会容忍令人反感的内容或滥用用户发布的信息\n 1.1每日通告同意按照本协议的规定及其不时发布的操作规则提供基于互联网以及移动互联网的相关服务（以下简称“网络服务”）。如无特别申明，本协议所称\"网络服务\"特指由每日通告提供的网络服务。\n    为获得网络服务，服务使用人(以下简称“用户”)应当同意本协议的全部条款并按照网站页面上的提示完成全部的注册程序。\n     用户在进行注册程序过程中点击“同意”按钮即表示用户完全接受本协议项下的全部条款。\n     每日通告提供的各项网络服务的运作权、所有权和解释权归属于每日通告。\n     1.2用户在注册时，必须提供详实、准确的个人资料；如注册完成后，个人资料发生任何变动，必须及时做出更新，保证信息准确有效。\n     1.3用户注册成功后，每日通告将给予每位用户一个独有的用户帐号及密码。用户帐号和密码由用户独享使用和负责保管，因此用户应当对以该用户帐号进行的所有活动和事件负法律责任。\n     用户若发现任何非法使用用户帐号或存在安全漏洞的情况，应立即通告每日通告。\n     二、服务内容\n     2.1每日通告仅提供相关的网络服务，除此之外与相关网络服务有关的设备(如个人电脑、手机、及其他与接入互联网或移动网有关的装置)及所需的费用(如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费)均应由用户自行负担。\n     2.2每日通告提供的部分网络服务为收费项目，用户若使用收费项目则需要向每日通告支付相应的费用。如用户拒绝支付相关费用，则每日通告有权不向用户提供上述收费网络服务。\n     三、服务变更、中断或终止\n     3.1用户同意，鉴于网络服务的特殊性，每日通告有权根据实际情况提供具体的网络服务内容，有权随时变更、中断或终止部分或全部的网络服务(包括收费网络服务)。\n     如变更、中断或终止的网络服务属于免费网络服务，每日通告无需通知用户，也无需对任何用户或任何第三方承担任何责任;\n     如变更、中断或终止的网络服务属于收费网络服务，每日通告会在变更、中断或终止之前事先通知用户，并协商相关事宜。\n     3.2用户理解，作为网络平台，每日通告需要定期或不定期地对提供网络服务的平台和相关的设备进行检修或维护，如因此类情况而造成收费网络服务在合理时间内的中断，每日通告无需为此承担任何责任。但每日通告会尽可能就检修维护事宜事先进行通告。\n     3.3如有下列任何情形之一， 每日通告有权随时中断或终止向用户提供本协议项下的网络服务(包括收费网络服务)而无需对用户或任何第三方承担任何责任：\n     (1)用户提供的个人资料不真实，不准确;\n     (2)用户在使用收费网络服务时未按规定向每日通告支付相应的服务费;\n     (3)用户违反本协议中规定的服务使用说明。\n     四、服务使用说明\n     4.1用户应妥善使用和保管自己的用户账号和密码，不可随意将自己的用户帐号、密码转让或借予他人使用。因用户的保管疏忽或黑客行为导致用户帐号、密码遭他人非法使用，每日通告将不承担任何责任。\n     4.2用户同意，对于用户通过网络服务，上传到每日通告的可公开获取信息区域中的任何内容，每日通告在全世界范围内享有免费、永久、不可撤销、非独家和完全再许可的权利，以使用、复制、修改、改编、出版、翻译、据以创作衍生作品、传播、表演和展示上述内容(整体或部分)，和/或将上述内容编入当前已知的，或以后开发的其他任何形式的作品、媒体或技术中。\n     4.3用户同意每日通告有权在提供网络服务过程中以各种方式投放各种商业性广告或其他任何类型的商业信息(包括但不限于在每日通告的任何页面上投放广告)，并且，用户同意接受每日通告通过电子邮件、手机短信或微信公众号等其他方式向用户发送商品促销或其他相关的商业信息。\n     4.4用户在使用网络服务过程中，必须遵守以下原则：\n     (1)遵守中华人民共和国的法律和法规;\n     (2)遵守所有与网络服务有关的网络协议、规定和程序;\n     (3)不得为任何非法目的而使用网络服务系统;\n     (4)不得以任何形式利用网络服务侵犯每日通告的商业利益与合法权益;\n     (5)不得利用网络服务系统进行任何可能对互联网或移动互联网正常运转造成不利影响的行为；\n     (6)不得利用网络服务上传、展示或传播任何虚假、骚扰、中伤他人、辱骂、恐吓、庸俗淫秽或其他任何非法的信息资料；\n     (7)不得侵犯其他任何第三方的专利权、著作权、商标权、名誉权或其他任何合法权益；\n     (8)不得利用网络服务系统进行任何不利于每日通告的行为；\n     4.5每日通告有权对用户使用网络服务的情况进行审查和监督(包括但不限于对用户存储在每日通告的内容进行审核)，如用户在使用网络服务时违反任何上述规定，每日通告或其授权人有权要求用户改正或直接采取一切必要的措施(包括但不限于更改或删除用户上传的内容等、暂停或终止用户使用网络服务)以减轻用户不当行为造成的影响。\n     4.6每日通告针对某些特定的网络服务的使用，通过各种方式(包括但不限于网页公告、电子邮件、短信提醒等)作出的任何声明、通知、警示等内容应视为本协议的一部分。用户如使用上述网络服务，视为用户也同意并遵守上述声明、通知、警示的内容。\n     五、用户隐私保护\n     5.1保护用户隐私是每日通告的一项基本政策。 每日通告保证不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在每日通告的非公开内容，但有下列情形之一除外：\n     (1)事先获得用户的明确授权;\n     (2)根据有关的法律法规要求;\n     (3)按照相关政府主管部门的要求;\n     (4)为维护社会公众的利益;\n     (5)为维护每日通告的合法权益。\n     5.2每日通告可能会与第三方合作向用户提供相关的网络服务，在此情况下，如该第三方同意承担与每日通告同等的保护用户隐私的责任，则每日通告有权将用户的注册资料等提供给该第三方。\n     5.3在不透露单个用户隐私资料的前提下，每日通告有权对整个用户数据库进行分析并对用户数据库进行商业上的利用。\n     六、知识产权\n     6.1每日通告提供的网络服务中包含的任何文本、图片、图形、音频和/或视频资料均受版权、商标和/或其它财产所有权法律的保护，未经相关权利人同意，上述资料均不得在任何媒体直接或间接发布、播放、出于播放或发布目的而改写或再发行，或者被用于其他任何商业目的。所有这些资料或资料的任何部分仅可作为私人和非商业用途而保存在某台计算机内。由于上述资料产生，或在传送/递交全部或部分上述资料过程中产生的延误、不准确、错误和遗漏，或从中/由此产生的任何损害赔偿，每日通告无需向用户或任何第三方承担任何形式的责任。\n     6.2每日通告为提供网络服务而使用的任何软件(包括但不限于软件中所含的任何图象、照片、动画、录像、录音、音乐、文字和附加程序、随附的帮助材料)的一切权利均属于该软件的著作权人，未经该软件的著作权人许可，用户不得对该软件进行反向工程(reverse engineer)、反向编译(decompile)或反汇编(disassemble)。\n     七、协议修改\n     7.1每日通告有权随时修改本协议的任何条款，一旦本协议的内容发生变动，每日通告将会直接在网站上公布修改之后的协议内容。该公布行为视为每日通告已经通知用户修改内容，每日通告也可通过其他适当方式向用户提示修改内容。\n     7.2如果不同意每日通告对本协议相关条款所做的修改，用户有权停止使用网络服务。但如果用户继续使用网络服务，则视为用户已接受每日通告对本协议相关条款所做的修改。\n     八、通知送达\n     8.1本协议项下每日通告对于用户所有的通知均可通过网页公告、电子邮件、手机短信或常规的信件传送等方式进行；自上述通知的发送之日起视为上述通知已送达收件人。\n     8.2用户对于每日通告的通知应当通过每日通告对外正式公布的通信地址、传真号码、电子邮件地址等联系信息进行送达。\n     九、违约赔偿\n     用户同意保障和维护每日通告及其他用户的利益，如因用户违反有关法律、法规或本协议项下的任何条款而给每日通告或任何其他第三人造成损失，用户同意承担由此造成的损害赔偿责任。\n     十、免责声明\n     10.1用户明确同意其使用网络服务所存在的风险将完全由其自己承担；因其使用网络服务而产生的一切后果也由其自己承担，每日通告对用户不承担任何责任。\n     10.2每日通告不担保网络服务一定能满足用户的所有需求，也不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。\n     10.3每日通告不保证为向用户提供便利而设置的外部链接的准确性和完整性。同时，对于上述外部链接指向的，不由每日通告实际控制的任何网页内容，每日通告不承担任何责任。\n     10.4对于因不可抗力或每日通告不能控制的原因造成的网络服务中断或其它缺陷，每日通告不承担任何责任，但会尽力减少由此给用户造成的损失和影响。\n     10.5用户同意，对于每日通告向用户提供的下列产品或者服务的质量缺陷本身及其引发的任何损失，每日通告无需承担任何责任：\n     (1)每日通告向用户免费提供的各项网络服务;\n     (2)每日通告向用户赠送的任何产品或者服务;\n     (3)每日通告向收费网络服务用户附赠的各种产品或者服务。\n     十一 、法律效力\n     11.1本协议构成双方对本协议之约定事项及其他有关事宜的完整协议，除本协议的规定之外，未赋予本协议各方其他权利。\n     11.2如本协议中的任何条款无论因何种原因完全或部分无效，或是不再具有执行力，本协议的其余条款并不受此影响而依然有效并具有法律约束力。\n     11.3本协议的订立、执行和解释及争议的解决，均应适用中华人民共和国法律并受中华人民共和国法院管辖。如发生本协议项下的服务条款与中华人民共和国法律相抵触时，则优先适用有关法律规定。\n     十二 、其他规定\n     12.1本协议中的标题仅为方便而设，在解释本协议时应被忽略。\n     12.2本协议未尽事宜应按友好协商原则，和中华人民共和国有关法律法规妥善处理。\n     免责声明\n     1、每日通告对由于用户不正当使用本网站服务、或依据本网站信息进行交易引起的对任何第三方的损害不承担任何赔偿责任。用户应对前述对每日通告或第三方的损害进行完全的赔偿。\n     2、本网站的内容及提供的服务不含任何明示性或暗示性的声明、保证或条件，包括但不限于关于真实性、适销性或适用于某一特定用途的明示或暗示性的声明、保证或条件，或者对其使用不会被中断或无误。\n     3、每日通告不声明或保证本网站或可从本网站下载的内容不带有计算机病毒或类似垃圾等的破坏功能。\n     4、每日通告不担保本网站服务一定能满足用户的要求，不对用户所发布信息的删除或储存失败负责。\n     5、若每日通告已经明示本网站运营方式发生变更并提醒用户应当注意事项，用户未按要求操作所产生的一切后果由用户自行承担。\n     6、每日通告有权但无义务，改善或更正本网站任何部分之任何疏漏、错误。\n     7、用户确认其知悉，使用本网站提供的服务涉及到互联网服务和电信增值服务，可能会受到各个环节不稳定因素的影响。因此服务存在因不可抗力、计算机病毒或黑客攻击、国家相关行业主管部门及电信运营商的调整、系统不稳定、用户所在位置、用户关机以及其他任何技术、互联网络、通信线路原因等造成的服务中断或不能满足用户要求的风险。用户须承担以上风险，每日通告不作担保。对因此导致用户不能发送、上传和接受阅读消息、或接发错消息，或无法实现其他通讯条件，每日通告不承担任何责任。\n     8、每日通告和每日通告仅对每日通告会员信息、发布信息的真实性承担保证责任。每日通告对于您通过每日通告与每日通告的其他用户，或者每日通告的会员之间达成的交易不承担任何法律责任。每日通告及每日通告对您通过每日通告与每日通告其他用户的交易中产生的任何形式的直接或间接损失，均不承担法律责任。\n     9、每日通告及每日通告对每日通告其他用户或者会员就与您通过每日通告达成的交易而向您提供发票的来源、真伪以及其它涉税问题不承担任何法律责任。\n     10、用户确认其知悉，在使用每日通告所提供的服务存在有来自任何其他人的包括威胁性的、诽谤性的、令人反感的或非法的内容或行为，或对他人权利的侵犯(包括知识产权)的匿名或冒名的信息的风险，用户须承担以上风险，对因此导致任何因用户不正当或非法使用服务产生的直接、间接、偶然、惩罚性的损害，不承担任何责任。\n     11、用户明确同意其使用每日通告服务所存在的风险将完全由其自己承担;因其使用本网站服务而产生的一切后果也由其自己承担，每日通告不对用户承担任何责任。\n     12、每日通告所收集的部分公开资料来源于互联网，转载的目的在于传递更多信息及用于网络分享，并不代表本站赞同其观点和对其真实性负责，也不构成任何其它建议。本站部分作品是由网友自主投稿和发布、编辑整理上传，对此类作品本站仅提供交流平台，不为其版权负责。如果您发现网站上有侵犯您知识产权的作品，请与我们取得联系，我们会及时修改或删除。\n     每日通告所提供的信息，仅供参考之用，本网站不保证信息的准确性、有效性、及时性和完整性。本网站及其雇员一概毋须以任何方式就任何信息传递或传送的失误、不准确或错误，对用户或任何其他人士负任何直接或间接责任。\n     附1：关于第三方链接\n     每日通告包含与第三方网站的联系。每日通告不对任何链接站点的内容负责。每日通告提供链接只作为对用户提供的一种便利服务。\n     为了您的方便，每日通告向您提供此链接，该链接会使您离开每日通告网站。由于所链接的网站不在每日通告的控制范围内，所以，对于任何链接网站上的内容或某一链接的网站所含的任何链接或对该等网站的任何变动或更新，每日通告不负任何责任。每日通告对从所链接的网站收到的网络传送或任何其它形式的传输不承担任何责任。\n     附2：文章详情页下方短声明\n     关于每日通告内容，我们将不提供任何形式的正确、有效、稳定等方面保证。同时，也不保证内容所包含的文字、图片、或其他任何形式内容的准确性。每日通告有权更改本网站内容，但不保证能够在第一时间通知所有用户。用户所使用的本网站服务所存风险和后果由其自己承担，每日通告不承担任何法律责任。如有疑问，请致电每日通告：4000–730–740咨询，感谢合作!\n\n\n\n\n\n\n\n\n\n"</string>
    <string name="str_unlogin_tip">精彩即可呈现</string>
    <string name="str_zero">0</string>
    <string name="str_mine_focus">推荐我的</string>
    <string name="str_mine_fans">我查看的</string>
    <string name="str_mine_guest">查看我的</string>
    <string name="str_user">用户</string>
    <string name="str_unreal_name">未实名</string>
    <string name="str_certified_name">已认证</string>
    <string name="str_communication_notice">沟通过的通告</string>
    <string name="str_mine_push">我发布的</string>
    <string name="str_shielding">屏蔽的人</string>
    <string name="str_service">联系客服</string>
    <string name="str_about">关于我们</string>
    <string name="str_get_authcode">发送验证码</string>
    <string name="str_new_pwd">请输入新密码</string>
    <string name="str_submit">提交</string>
    <string name="str_suggestion_hint">如果有什么意见或者建议，欢迎在此反馈给我们</string>
    <string name="str_about_app">\u3000\u3000 \"每日通告是一个为个人提供一个展示自我，为通告商提供一个招募人员的的平台 \n\n \u3000\u3000“精华在笔端，咫尺匠心难。”  \n\n \u3000\u3000五年匠心，追求卓越产品，推敲打磨，潜心雕琢，同时深谙产品品牌借助文字设计的推广之道，专注于为个人以及商家提供品牌策划、文案策划、平面设计等综合服务。 \n \u3000\u3000匠心造物，从软文字句，到设计颜色，资深成员精心设计，始终坚守，安静专注，与浮躁无关。从品牌实际情况出发，结合丰富的实战经验，提炼贴心的营销策划匠心精华。 \n \u3000\u3000匠心，用最美的年华做最喜欢最擅长的事情，将岁月打磨成作品，用产品丰厚岁月\"</string>
    <string name="str_net_error">网络错误，请稍后再试</string>
    <string name="str_loading">加载中…</string>
    <string name="str_login_success">登录成功</string>
    <string name="str_login_error">登录失败,请稍后再试</string>
    <string name="str_phonenum_error">手机号码有误，请重新输入…</string>
    <string name="str_phonenum_empty">请输入手机号码</string>
    <string name="str_send_smscode_success">短信已发送，请输入验证码来重置密码</string>
    <string name="str_getuser_error">获取用户信息失败</string>
    <string name="str_logout">退出登录</string>
    <string name="str_setting">设置</string>
    <string name="str_accountmanager">账号管理</string>
    <string name="str_cacheclear">清除缓存</string>
    <string name="str_cancel">取消</string>
    <string name="str_exit">登出</string>
    <string name="str_tip">提示</string>
    <string name="str_positive">确认</string>
    <string name="str_yet_bind_phonenum">已绑定手机号</string>
    <string name="str_pwd_edit">密码修改</string>
    <string name="str_edit_confirm">确认修改</string>
    <string name="str_origin_pwd_input">输入原密码</string>
    <string name="str_new_pwd_input">输入新密码</string>
    <string name="str_origin_phone_input">输入原手机号</string>
    <string name="str_new_phone_input">输入新手机号</string>
    <string name="str_asterisk">xxxxxxxx</string>
    <string name="str_verifycode_toast">验证码发送成功，请注意查收</string>
    <string name="str_verifycode">验证码</string>
    <string name="str_update_error">修改失败，请稍后再试</string>
    <string name="str_title_recomment">推荐我的</string>
    <string name="str_title_fans">我查看的</string>
    <string name="str_title_focus">查看我的</string>
    <string name="str_title_comm_notice">沟通过的公告</string>
    <string name="str_title_mine_push">我发布的</string>
    <string name="str_title_shield">屏蔽过的人</string>
    <string name="str_remove">移出</string>
    <string name="str_expired">已过期</string>
    <string name="image_transition_name">image_transition</string>
    <string name="str_shield_success_tips">屏蔽成功，刷新将不再看到此用户的动态</string>
    <string name="str_write_comment_hint">写评论…(最多140字哦)</string>
    <string name="str_send">发送</string>
    <string name="str_error_server">"抱歉，服务器开小差"</string>
    <string name="str_shield_user">屏蔽此人</string>
    <string name="str_del_post">刪除</string>
    <string name="str_report">举报</string>
    <string name="str_complain">投诉</string>
    <string name="str_report_success">举报成功，我们会在 24H 内核实处理</string>
    <string name="str_dynamic_detail_comment">全部评论</string>
    <string name="str_dynamic_all">全部评论</string>
    <string name="str_dynamic_detail">动态详情</string>
    <string name="str_no_comments">暂无评论</string>
    <string name="str_userinfo_no_autonym">通过实名认证，提高个人信誉</string>
    <string name="str_userinfopic_empty">还没有展示图片，赶快添加吧</string>
    <string name="str_direct_msg">私信</string>
    <string name="str_communication_immediately">立即沟通</string>
    <string name="str_stage_name">艺名</string>
    <string name="str_state_auth">认证状态</string>
    <string name="str_unauth">未认证</string>
    <string name="str_real_name">真实姓名</string>
    <string name="str_input_real_name">请输入身份证姓名</string>
    <string name="str_number_certificate">证件号码</string>
    <string name="str_input_certificate_num">请输入身份证号码</string>
    <string name="str_upload_certificate_pic">上传持证照</string>
    <string name="str_upload_certificate_note">证件上传要求如下： \n1、持证正面照需本人手持证件,免冠未妆能辨识 \n2、证件上信息/号码/住址需清晰可见 \n3、照片大小5M以内</string>
    <string name="str_submit_for_audit">提交审核</string>
</resources>