<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/view_title"/>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fillViewport="true"
            android:layout_below="@id/layout_title"
            android:overScrollMode="never"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <!--认证状态-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_54"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_state_auth"
                        android:textSize="@dimen/sp_15"
                        android:textColor="@color/color_666"
                        android:gravity="center_vertical"
                />

                <TextView
                        android:id="@+id/tv_state_auth"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/str_unauth"
                        android:textSize="@dimen/sp_15"
                        android:textColor="@color/color_ff5e42"
                        android:gravity="center_vertical|end"
                        tools:ignore="HardcodedText"/>
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_f3f3f3"/>

            <!--真实姓名-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_54"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_real_name"
                        android:textSize="@dimen/sp_15"
                        android:textColor="@color/color_666"
                        android:gravity="center_vertical"
                />

                <EditText
                        android:id="@+id/et_real_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/str_input_real_name"
                        android:textSize="@dimen/sp_15"
                        android:maxLength="20"
                        android:background="@android:color/transparent"
                        android:textColor="@color/color_222"
                        android:gravity="center_vertical|end"
                        tools:ignore="HardcodedText,TextFields"/>
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_f3f3f3"/>
            <!--证件号码-->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_54"
                    android:orientation="horizontal"
                    tools:ignore="UselessLeaf">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/str_number_certificate"
                        android:textSize="@dimen/sp_15"
                        android:textColor="@color/color_666"
                        android:gravity="center_vertical"
                />

                <EditText
                        android:id="@+id/et_number_certificate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/str_input_certificate_num"
                        android:background="@android:color/transparent"
                        android:textSize="@dimen/sp_15"
                        android:maxLength="20"
                        android:textColor="@color/color_222"
                        android:gravity="center_vertical|end"
                        tools:ignore="HardcodedText,TextFields"/>
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/color_f3f3f3"/>

            <!--上传持证照-->

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_upload_certificate_pic"
                    android:textSize="@dimen/sp_15"
                    android:textColor="@color/color_666"
                    android:layout_marginTop="@dimen/dp_20"
            />
            <FrameLayout
                    android:layout_width="@dimen/dp_150"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginTop="@dimen/dp_20">

                <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/drawee_certificete"
                        android:layout_width="@dimen/dp_150"
                        android:layout_height="@dimen/dp_100"
                        app:roundedCornerRadius="@dimen/dp_4"
                        android:visibility="gone"
                />

                <ImageView
                        android:id="@+id/iv_pic_certificete"
                        android:layout_width="@dimen/dp_150"
                        android:layout_height="@dimen/dp_100"
                        android:src="@mipmap/ico_personal_certificate"
                        android:scaleType="centerInside"
                        android:background="@drawable/shape_round_4"
                        tools:ignore="ContentDescription"/>
            </FrameLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:lineSpacingMultiplier="1.6"
                    android:text="@string/str_upload_certificate_note"
                    android:textSize="@dimen/sp_12"
                    android:textColor="@color/color_666"
            />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!--提交审核-->

    <TextView
            android:id="@+id/tv_submit_audit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_23"
            android:layout_marginEnd="@dimen/dp_23"
            android:text="@string/str_submit_for_audit"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_999"
            android:background="@drawable/shape_submit_unchecked_bg"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_65"
    />
</RelativeLayout>