<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_white">

        <ImageView
                android:id="@+id/iv_login_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_280"
                android:src="@mipmap/ico_login_bg"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription"/>

        <android.support.v7.widget.Toolbar
                android:id="@+id/fl_login_del"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_64"
                >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_24"
                    android:src="@mipmap/ico_nav_back"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription"/>
        </android.support.v7.widget.Toolbar>

        <TextView
                android:id="@+id/tv_login_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_107"
                android:text="@string/str_login_tip"
                android:textSize="@dimen/sp_26"
                android:textColor="@color/color_222"
                android:textStyle="bold"/>

        <!-- 手机号 -->
        <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_43"
                android:layout_marginEnd="@dimen/dp_43"
                android:layout_marginTop="@dimen/dp_57"
                android:layout_gravity="center_vertical"
                android:hint="@string/str_phone_num"
                android:background="@android:color/transparent"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true"
                android:layout_below="@id/iv_login_bg"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_bbb"
                android:textSize="@dimen/sp_16"/>

        <View
                android:id="@+id/line_phonenum"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dp_43"
                android:layout_marginEnd="@dimen/dp_43"
                android:layout_height="@dimen/dp_1"
                android:layout_marginTop="@dimen/dp_19"
                android:background="@color/color_f3f3f3"
                android:layout_below="@id/et_phoneNumber"/>

        <!-- 登录密码 -->
        <RelativeLayout
                android:id="@+id/layout_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_43"
                android:layout_marginEnd="@dimen/dp_43"
                android:layout_below="@id/line_phonenum">

            <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_19"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/str_pwd"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:maxLength="26"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_bbb"
                    android:textSize="@dimen/sp_16"/>

            <View
                    android:id="@+id/line_authcode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="@dimen/dp_19"
                    android:background="@color/color_f3f3f3"
                    android:layout_below="@id/et_pwd"/>

            <TextView
                    android:id="@+id/tv_forget_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_forget_pwd"
                    android:textSize="@dimen/sp_13"
                    android:textColor="@color/color_black"
                    android:background="@drawable/shape_forget_pwd"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
                android:id="@+id/tv_tip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_login_little_tip"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_black"
                android:layout_below="@id/layout_pwd"
                android:layout_marginStart="@dimen/dp_43"
                android:layout_marginTop="@dimen/dp_15"/>

        <TextView
                android:id="@+id/tv_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_start_login_tip"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_black"
                android:layout_below="@id/tv_tip_title"
                android:layout_marginStart="@dimen/dp_56"
                android:layout_marginTop="@dimen/dp_10"/>

        <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_marginStart="@dimen/dp_43"
                android:layout_marginEnd="@dimen/dp_43"
                android:layout_below="@id/tv_tip"
                android:text="@string/str_login"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/color_999"
                android:background="@drawable/shape_submit_unchecked_bg"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_30"
                />

        <TextView
                android:id="@+id/tv_login_agreement_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_login_agreement_tip"
                android:textSize="@dimen/sp_11"
                android:textColor="@color/color_999"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/dp_10"/>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>